# cosmic

./: .gitignore  CMakeLists.txt  README.md  compile.sh  profile_blackhole.sh  setup_cuda_env.sh
data/: BH_1920x1080_MP.ppm  bh_array.ppm
include/: config.h  constants.h  cuda_helper.cuh  dormand_prince.h  dormand_prince_cuda.cuh  image_processing.h  metric.h  metric_cuda.cuh  omp_helper.h  perlin.h  ray_tracer.h  ray_tracer_cuda.cuh  shader.h
include/cosmic/: clock.h  config.h  constants.h  dormand_prince_cuda.cuh  metric.h  metric_cuda.cuh  perlin.h  ray_tracer.h  ray_tracer_cuda.cuh  rk45_dp.h  rk45_dp2.h  rk45_dp2_count.h  rk45dp3.h  shader.h
scripts/: convert_frames_to_video.sh
shaders/: grayscale.frag  hot_colormap.frag  simple.vert
src/: bh_cpu count.cpp  bh_cpu.cpp  bh_cpu_array.cpp  bh_cpu_vector.cpp  bh_gl_omp.cpp  cosmic_cpu.cpp  cosmic_cpu_gl.cpp  cosmic_cuda.cu  cosmic_cuda_gl.cu
test/: bh_1920x1080_omp.cpp  bh_cpu count.cpp  bh_cpu_array.cpp  bh_cpu_vector.cpp  perlin_noise.pgm  perlin_noise_image  perlin_noise_image.cpp  rk45_dp.h  rk45_dp2_count.h
test/include/cosmic/: dormand_prince.h  metric.h  rk45_dp2.h  shader.h  timer.h
test/src/: cosmic_cpu.cpp  cosmic_cpu_gl.cpp
